fix text-align of dialog in footer

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -40,4 +40,8 @@
 
 footer {
   text-align: center;
+
+  dialog {
+    text-align: start;
+  }
 }
